cabal-version:       2.2
name:                blockfrost-freer-client
version:             0.1.0.0
synopsis:            blockfrost.io freer-simple client
description:         Blockfrost client for use with freer-simple
homepage:            https://github.com/blockfrost/blockfrost-haskell
license:             Apache-2.0
license-file:        LICENSE
author:              blockfrost.io
maintainer:          srk@48.io
copyright:           2021 blockfrost.io
category:            Web
build-type:          Simple


extra-source-files:
    CHANGELOG.md
    LICENSE
    README.md

flag BuildFast
     Default: True
     Description: Turn off optimizations

flag Examples
     Default: False
     Description: Build examples

flag Production
     Default: False
     Description: Production build

common libstuff
  default-language:    Haskell2010
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingVia
    GADTs
    GeneralizedNewtypeDeriving
    FlexibleContexts
    FlexibleInstances
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    RankNTypes
    ScopedTypeVariables
    TemplateHaskell
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns
    OverloadedStrings
  ghc-options:         -Wall -Wunused-packages
                       -fno-specialize
                       -- ^ this helps quite a lot
                       -- with memory usage
                       -- https://github.com/haskell-servant/servant/issues/986
                       -- but -O0 is even better
  if flag(BuildFast)
    ghc-options: -O0
  if flag(Production)
    ghc-options: -Werror

library
   import:              libstuff
   hs-source-dirs:      src
   exposed-modules:     Blockfrost.Freer.Client
   build-depends:       base >= 4.7 && < 5
                      , blockfrost-api
                      , blockfrost-client
                      , blockfrost-client-core
                      , freer-simple
                      , servant-client        ^>= 0.18

executable blockfrost-freer-client-example
  if !flag(Examples)
    buildable: False
  hs-source-dirs:      example
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , blockfrost-freer-client
                     , freer-simple
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/blockfrost/blockfrost-haskell
