cabal-version:       2.2
name:                plutus-chain-index-blockfrost
version:             0.1.0.0
synopsis:            Example project
-- description:         Something a bit longer
-- homepage:            https://github.com/sorki/@project@
-- license:             BSD-3-Clause
-- license-file:        LICENSE
-- author:              Richard Marko
-- maintainer:          srk@48.io
-- copyright:           2021 Richard Marko
-- category:            Web
build-type:          Simple

-- extra-source-files:
--     CHANGELOG.md
--     LICENSE
--     README.md

common lang
    default-language: Haskell2010
    default-extensions: ExplicitForAll ScopedTypeVariables
                        DeriveGeneric StandaloneDeriving DeriveLift
                        GeneralizedNewtypeDeriving DeriveFunctor DeriveFoldable
                        DeriveTraversable ImportQualifiedPost
    ghc-options: -Wall -Wnoncanonical-monad-instances -Wunused-packages
                 -Wincomplete-uni-patterns -Wincomplete-record-updates
                 -Wredundant-constraints -Widentities


library
  import: lang
  hs-source-dirs:      src
  exposed-modules:     Plutus.ChainIndex.Blockfrost
                       Plutus.ChainIndex.Blockfrost.Run
                       Plutus.ChainIndex.Blockfrost.Server
                       Plutus.ChainIndex.Blockfrost.Handlers
--                     , Template.Types
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , plutus-chain-index-core
                     , cardano-addresses
                     , cardano-api
                     , plutus-ledger-api
                     , plutus-tx
                     , blockfrost-client
                     , blockfrost-freer-client
                     , bytestring
                     , text
                     , mtl
                     , freer-simple
                     , freer-extras
                     , safe-money
                     , servant
                     , servant-server
                     , warp
		     -- handlers
                     , lens
                     , fingertree
                     , containers
                     , beam-core
                     , beam-sqlite
                     , plutus-ledger
                     , base16-bytestring
                     , serialise
		     -- run
                     , sqlite-simple
                     , iohk-monitoring
                     , data-default


  default-language:    Haskell2010

executable server-exe
  import: lang
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , plutus-chain-index-blockfrost
                     , plutus-chain-index
		     -- uff
                     , aeson
                     , yaml
                     , optparse-applicative
                     , prettyprinter
                     , iohk-monitoring
                     , plutus-chain-index-core
  default-language:    Haskell2010


-- test-suite test-tests
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   other-modules:       --ParseSpec
--                        SpecHelper
--   build-depends:       base >= 4.7 && < 5
--                      , test
--                      , hspec
--                      , base16-bytestring
--   default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sorki/test
